# apfs-hcp-patcher

./: .gitignore  .ruff.toml  README.md  patcher.py  pyproject.toml
.github/workflows/: ci.yml  tag-release.yml
src/apfs_hcp_patcher/: __init__.py  app.py  patch.py
src/apfs_hcp_patcher/cli/: __init__.py  __main__.py
src/macho/: __init__.py  _spec.py  image.py  ops.py
tests/: test_patch.py
