[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apfs-hcp-patcher"
version = "0.2.0"
description = "Patches APFS.kext to enable snapshot delta restores for HCP volumes"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Peter A.", email = "ink.splatters@pm.me" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]


[project.scripts]
apfs-hcp-patcher = "apfs_hcp_patcher.cli:apfs_hcp_patcher"

[tool.hatch.build.targets.wheel]
packages = ["src/apfs_hcp_patcher", "src/macho"]

[tool.poe.tasks]
typecheck = "ty"
lint = ["ruff:check", "typecheck"]
fix = ["ruff:format", "ruff:fix", "typecheck check"]
test = "pytest -q"

[tool.poe.tasks."ruff:format"]
cmd = "ruff format"

[tool.poe.tasks."ruff:check"]
cmd = "ruff check"

[tool.poe.tasks."ruff:fix"]
cmd = "ruff check --fix"

[tool.poe]
executor = { type = "uv" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
    "--cov=apfs_hcp_patcher",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
]
